test/files/invalid/order_include_decl.fbs
table Foo {}
include "/dev/null";