test/files/invalid/order_include_decl.stderr
error: Cannot have includes after the first type declaration
  ┌─ test/files/invalid/order_include_decl.fbs:1:1
  │
1 │ table Foo {}
  │ ------------ type declaration was here
2 │ include "/dev/null";
  │ -------------------- include was here

Error: Bailing because of errors
